--- a/Gym Website by Trex-96/index.html
+++ b/Gym Website by Trex-96/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Gym Websites</title>
+    <title>Body Flex Gym</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <script src="https://kit.fontawesome.com/c2ca9515ae.js" crossorigin="anonymous"></script>
@@ -43,7 +43,7 @@
                     <li>
                         <a href="#here" class="nav-link">Contact</a></li>
                 </ul>
-                <a href="#" id="nav-cta">Subcribe</a>
+                <a href="forms.html" id="nav-cta">Subcribe</a>
             </nav>
         </div>
     </header>
@@ -52,7 +52,7 @@
         <div class="lol">
             <h1>MindSet!</h1>
             <p>Forget failure. Forget Mistakes. Forget Everything, except what you're going to do now. And do it.</p>
-            <button>Enroll Now</button>
+            <button><a href="forms.html" class="nav-link">Enroll Now</a></button>
         </div>
     </section>
 
